# my-cv

./: .env.example  .gitignore  AGENTS.md  README.md  Sepehr_Laal_CV.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
markdown/: Header.j2.md
scripts/: backend.ts  build-pages.ts  build.ts  enhance-site-html.mjs  enhance-site-html.ts  frontend.ts  seed-master-resume.ts  setup.ts  start.ts  stop.ts  test-llm.ts
scripts/lib/: constants.ts  pdf-link.ts  processes.ts  site-html.ts  venv.ts
