[project]
name = "mycv"
version = "1.0.0"
description = "My CV"
authors = [
    {name = "Sepehr Laal"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "rendercv[full]==2.8",
    "fastapi==0.128.4",
    "uvicorn==0.40.0",
    "python-multipart==0.0.31",
    "pydantic==2.12.5",
    "pydantic-settings==2.14.2",
    "tinydb==4.8.2",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "cryptography==48.0.1",
    "litellm==1.86.2",
    "markitdown[docx]==0.1.4",
    "pdfminer.six==20260107",
    "playwright==1.58.0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.rendercv]
